--- a/.config/i3/config
+++ b/.config/i3/config
@@ -70,23 +70,11 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# Alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
 # Move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
-
-# Alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
 
 # Split in horizontal orientation
 bindsym $mod+s split h
@@ -146,34 +134,19 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # Lock screen
-bindsym $mod+x exec /home/$USER/.config/i3/lock
+bindsym $mod+ctrl+x exec /home/$USER/.config/i3/lock
 # Reload the configuration file
-bindsym $mod+Shift+r reload
+bindsym $mod+ctrl+r reload
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+w restart
+bindsym $mod+ctrl+w restart
 # Exit i3 (logs you out of your X session)
-bindsym $mod+Shift+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+ctrl+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # Resize window (you can also use the mouse for that)
-mode "resize" {
-    # These bindings trigger as soon as you enter the resize mode
-    bindsym h resize shrink width  2 px or 2 ppt
-    bindsym j resize grow height   2 px or 2 ppt
-    bindsym k resize shrink height 2 px or 2 ppt
-    bindsym l resize grow width    2 px or 2 ppt
-
-    bindsym Left resize shrink width 2 px or 2 ppt
-    bindsym Down resize grow height  2 px or 2 ppt
-    bindsym Up resize shrink height  2 px or 2 ppt
-    bindsym Right resize grow width  2 px or 2 ppt
-
-    # Back to normal: Enter or Escape or $mod+r
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-    bindsym $mod+r mode "default"
-}
-
-bindsym $mod+r mode "resize"
+bindsym $mod+ctrl+h resize shrink width  2 px or 2 ppt
+bindsym $mod+ctrl+j resize grow height   2 px or 2 ppt
+bindsym $mod+ctrl+k resize shrink height 2 px or 2 ppt
+bindsym $mod+ctrl+l resize grow width    2 px or 2 ppt
 
 # Color schemes for windows
 set $bgcolor    #e277f4
