--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -8,6 +8,7 @@
     "keyboard.dispatch": "keyCode",
     "git.autofetch": true,
     "vsicons.dontShowNewVersionMessage": true,
+    "vim.handleKeys": { "<C-f>": false },
     "vim.useSystemClipboard": true,
     "workbench.colorTheme": "One Dark Pro Darker",
 }
