--- a/.config/VSCodium/User/settings.json
+++ b/.config/VSCodium/User/settings.json
@@ -4,7 +4,7 @@
     "editor.fontFamily": "FiraMono Nerd Font",
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": true,
+    "editor.detectIndentation": false,
     "keyboard.dispatch": "keyCode",
     "git.autofetch": true,
     "vsicons.dontShowNewVersionMessage": true,
