switched from codium to code

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -12,4 +12,5 @@
     "vim.useSystemClipboard": true,
     "workbench.colorTheme": "One Dark Pro Darker",
     "files.autoSave": "afterDelay",
+    "cmake.showOptionsMovedNotification": false
 }
