--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -12,5 +12,8 @@
     "vim.useSystemClipboard": true,
     "workbench.colorTheme": "One Dark Pro Darker",
     "files.autoSave": "afterDelay",
-    "cmake.showOptionsMovedNotification": false
+    "cmake.showOptionsMovedNotification": false,
+    "[cpp]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    }
 }
