--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -4,7 +4,6 @@
     "editor.fontFamily": "FiraMono Nerd Font",
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
     "keyboard.dispatch": "keyCode",
     "git.autofetch": true,
     "vsicons.dontShowNewVersionMessage": true,
@@ -15,5 +14,6 @@
     "cmake.showOptionsMovedNotification": false,
     "[cpp]": {
         "editor.defaultFormatter": "xaver.clang-format"
-    }
+    },
+    "breadcrumbs.enabled": false
 }
