--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,10 @@
-# Remap prefix from 'C-b' to 'C-w'
+# Remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-w
-bind-key C-w send-prefix
+set -g prefix C-a
+bind C-a send-prefix
+
+# Use vim keybindings
+set-window-option -g mode-keys vi
 
 # Split panes using 's' and 'v'
 bind v split-window -h
@@ -12,6 +15,9 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Increase tmux history
+set -g history-limit 9999999
 
 # Set mouse on
 set -g mouse on
