added tmux config to copy to system clipboard in vim mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,3 +24,7 @@ set -g mouse on
 
 # Remove escape key delay
 set -sg escape-time 0
+
+# Copy to system clipboard
+bind -T copy-mode-vi V send-keys -X begin-selection
+bind -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
