--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -35,14 +35,14 @@ exec_always --no-startup-id setxkbmap -option caps:escape
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@   +10%   && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@   -10%   && $refresh_i3status
-bindsym XF86AudioMute 		 exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@   toggle && $refresh_i3status
-bindsym XF86AudioMicMute 	 exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pamixer -i 1 && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 1 && $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pamixer -t && $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pamixer --default-source -t && $refresh_i3status
 
 # Use light to change screen brightness
-bindsym XF86MonBrightnessDown exec --no-startup-id light -U 5
-bindsym XF86MonBrightnessUp   exec --no-startup-id light -A 5
+bindsym XF86MonBrightnessDown exec --no-startup-id light -U 1
+bindsym XF86MonBrightnessUp   exec --no-startup-id light -A 1
 
 # Screenshots
 bindsym --release Print exec --no-startup-id gnome-screenshot -a -f "$(xdg-user-dir PICTURES)/$(date +'%Y-%m-%d_%H-%M-%S').png"
