--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,3 +28,7 @@ set -sg escape-time 0
 # Copy to system clipboard
 bind -T copy-mode-vi V send-keys -X begin-selection
 bind -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+# Don't scroll all the way down on copy
+unbind-key -T copy-mode-vi MouseDragEnd1Pane
+bind-key -T copy-mode-vi y send-keys -X copy-selection
